Refactor code and fix bugs

--- a/app/javascript/dashboard/i18n/locale/vi/cannedMgmt.json
+++ b/app/javascript/dashboard/i18n/locale/vi/cannedMgmt.json
@@ -12,9 +12,10 @@
       "TABLE_HEADER": [
         "Mã tắt",
         "Nội dung",
-        "FILE",
+        "Tập tin",
         "Hành động"
-      ]
+      ],
+      "QTY": "SL:%{number}"
     },
     "ADD": {
       "TITLE": "Thêm tin nhắn mẫu",
