Add routes and entry point

--- a/app/javascript/dashboard/i18n/locale/vi/report.json
+++ b/app/javascript/dashboard/i18n/locale/vi/report.json
@@ -486,6 +486,9 @@
       }
     }
   },
+  "CONVERSION_REPORTS": {
+    "HEADER": "Báo cáo thống kê chuyển đổi khách hàng"
+  },
   "OVERVIEW_REPORTS": {
     "HEADER": "Tổng quan hội thoại",
     "LIVE": "Live",
